英語に変更

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% if request.user.is_authenticated %}
 <div class="h1">MyPage</div>
 {% else %}
-<div class="h1">Main</div>
+<div class="h1">Mini-Teams</div>
 {% endif %}
 {% endblock %}
 
