--- a/work/templates/work/delete.html
+++ b/work/templates/work/delete.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>{{ message.title }} の削除</title>
+    <title>Delate{{ message.title }}?</title>
     <!-- css only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.css" rel="stylesheet"
         crossorigin="anonymous" />
